<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/splash_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/main_logo"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/md_white_1000"
            android:textSize="28sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.axzae.homeassistant.view.MaterialEditText
            android:id="@+id/text_ipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_baseurl"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:maxLines="1"
            android:nextFocusDown="@+id/text_password"
            app:met_errorColor="@color/md_red_A200"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/prompt_ipaddress"
            app:met_textColor="@color/md_white_1000"
            app:met_textColorHint="#b3e0f5"
            app:met_underlineColor="#b3e0f5"
            tools:ignore="RtlHardcoded">

            <requestFocus/>
        </com.axzae.homeassistant.view.MaterialEditText>

        <com.axzae.homeassistant.view.MaterialEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            app:met_errorColor="@color/md_red_A200"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/prompt_password"
            app:met_textColor="@color/md_white_1000"
            app:met_textColorHint="#b3e0f5"
            app:met_underlineColor="#b3e0f5"
            tools:ignore="RtlHardcoded">

            <requestFocus/>
        </com.axzae.homeassistant.view.MaterialEditText>

        <Button
            android:id="@+id/button_connect"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_flat_white"
            android:text="@string/button_connect"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:indeterminate="true"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false"/>

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/md_white_1000"
            tools:text="@string/progress_connecting"/>

    </LinearLayout>
</LinearLayout>