<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/main_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/main_logo_inverse"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="12dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_designed_by"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/axzae"
                    android:textColor="#0099CC"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="12sp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center_horizontal"
                android:text="@string/about_extra"
                android:textColor="@color/colorSecondaryText"
                android:textSize="11sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/about_contributors"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/contributors_translation"
                android:textColor="@color/colorSecondaryText"
                android:textSize="11sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/about_suggestions_improvements"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/trello_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/trello_badge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/about_feedbacks_ratings"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/playstore_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/playstore_badge"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
